# GondwanaServer

./: .gitignore  Dawn of Light.sln  Dockerfile  README.md
.github/workflows/: create_release.yml  test_runner.yml
DOLBase/: Constants.cs  DOLBase.csproj  Marshal.cs  Statistics.cs  WeakMulticastDelegate.cs  WeakRef.cs
DOLBase/Config/: BaseServerConfiguration.cs  ConfigElement.cs  XMLConfigFile.cs
DOLBase/FTP/: FTPAsynchronousConnection.cs  FTPConnection.cs  FTPFile.cs  FTPFileTransferType.cs  FTPMode.cs
DOLBase/MPK/: MPK.cs  MPKFile.cs  (+1 more)
DOLDatabase/: CustomParam.cs  DOLDatabase.csproj  DataObject.cs  DataTableHandler.cs  DatabaseException.cs  DatabaseUtils.cs  ElementBinding.cs  IObjectDatabase.cs  ObjectDatabase.cs  SQLObjectDatabase.cs  WhereClause.cs  WhereLinqExpression.cs
DOLServer/: ConsolePacketLib.cs  DOLServer.csproj  GameServerService.cs  GameServerServiceInstaller.cs  IAction.cs  MainClass.cs  app.config
GameServer/: DolWebHook.cs  GameClient.cs  GameServer.cs  GameServer.csproj  GameServerConfiguration.cs  GlobalConstants.cs  IGamePlayer.cs  ResourceUtil.cs  SimpleScheduler.cs
Pathing_native/Detour/: CMakeLists.txt
Pathing_native/Detour/Include/: DetourAssert.h  DetourCommon.h  DetourNavMesh.h  DetourNavMeshBuilder.h  DetourNavMeshQuery.h  DetourNode.h  DetourStatus.h  dol_detour.hpp
Pathing_native/Detour/Source/: DOLInterface.cpp  DetourAlloc.cpp  DetourAssert.cpp  DetourCommon.cpp  DetourNavMesh.cpp  DetourNavMeshBuilder.cpp  DetourNavMeshQuery.cpp  DetourNode.cpp
Pathing_native/Detour/Test/: main.cpp
Tests/: Tests.csproj
(+2707 files in other folders)
